--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@types/multer": "^1.4.12",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "express": "^4.21.2",
+    "jest": "^29.7.0",
     "multer": "^1.4.5-lts.1"
   }
 }
